test/success/nostd/instance_resolution/module_witness_canonical/main.sk
module Main {

trait S[T] {
    fn foo(t: T)
}

struct Q {}

instance S[Q] {
    fn foo(t: Q) {}
}

fn main() {
    let q = Q();
    foo(q);
}

}