test/errors/borrowcheck/localborrow/main.sk
module Main {

fn sink[T](t: T) {}

fn main() {
    let x = 5;
    let y = &x;
    sink(x);
    sink(y);

}

}
